Kubernetics_P/k8_s/api-server.yml
apiVersion: v1
kind: Service
metadata:
  name: api-server
spec:
  type: NodePort # <-- Makes it public
  ports:
  - port: 5000       # Internal port
    targetPort: 5000
    nodePort: 30002  # <-- Public port you will access
  selector:
    app: api-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
      - name: api-server
        image: aravindreddy9548/unit-converter-api:latest # <-- Your image
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
