Kubernetics_P/k8_s/kafka.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-new
spec:
  ports:
  - port: 29092
    name: internal
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:7.6.0
        ports:
        - containerPort: 29092
